--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ h1 {
   font-family: 'New Rocker', cursive;
   font-size: 80px;
   text-shadow: 2px 4px #666;
+  padding: 5px 0 0 0;
+  margin: 10px;
 }
 
 #img {
@@ -22,8 +24,10 @@ h1 {
 }
 
 img {
-  padding-top: 55px;
-  width: 300px;
+  padding: 55px 0 0 0;
+  margin: 0;
+  width: 500px;
+
 }
 
 h2 {
@@ -55,16 +59,16 @@ h2 {
 }
 
 #quote {
+  width: 900px;
+  height: 300px;
   font-family: 'Lobster', cursive;
+  font-size: 20px;
   text-align: center;
-  padding: 20px;
   background: rgba(38, 38, 38, 0.8);
   text-shadow: 1px 1px #666;
+  padding: 50px 0 50px 0;
 }
 
-/* .qMark {
-  font-size: 80px;
-} */
 a {
   text-decoration: none;
   color: white;
@@ -76,7 +80,7 @@ a {
 }
 #watch {
   background: #9A12B3;
-  height: 400px;
+  height: 550px;
   text-align: center;
   color: white;
   width: 400px;
@@ -92,4 +96,6 @@ a {
 
 #d {
   font-family: 'Metal Mania', cursive;
+  font-size: 40px;
+  margin-bottom: 0;
 }
